Forgot to track changes 😂.

--- a/app/src/main/res/layout/activity_email_verification_page.xml
+++ b/app/src/main/res/layout/activity_email_verification_page.xml
@@ -7,7 +7,7 @@ android:layout_width="match_parent"
 android:background="@drawable/gradient_blue_to_white"
 android:layout_height="match_parent"
 android:orientation="vertical"
-tools:context=".EmailVerificationPage">
+tools:context=".newUiActivity.EmailVerificationPage">
     <androidx.core.widget.NestedScrollView
         android:fillViewport="true"
         android:layout_width="match_parent"
