--- a/app/src/main/res/layout/add_new_ogpa_criteria.xml
+++ b/app/src/main/res/layout/add_new_ogpa_criteria.xml
@@ -12,18 +12,21 @@
         android:textColor="@color/black"
         android:maxLength="20"
         android:textColorHint="@color/black"
-        android:textSize="@dimen/_18ssp"
+        android:textSize="@dimen/_14ssp"
+        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTuvwxyz"
         android:id="@+id/name_at_add_new_ogpa"
-        android:background="@drawable/less_border_blue"
+        android:background="@drawable/less_border_white"
         android:layout_margin="@dimen/_10sdp"
         android:padding="@dimen/_10sdp"
         android:inputType="textPersonName"
         android:autofillHints="name"
         android:textAlignment="viewStart"
+        android:theme="@style/font_regular"
         />
     <Spinner
+        android:theme="@style/font_regular"
         android:dropDownSelector="@color/black"
-        android:background="@drawable/less_border_blue"
+        android:background="@drawable/less_border_white"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
         android:layout_marginBottom="@dimen/_10sdp"
