--- a/app/src/main/res/layout/topper_tips_recycler_text_holder.xml
+++ b/app/src/main/res/layout/topper_tips_recycler_text_holder.xml
@@ -4,17 +4,16 @@
     android:padding="@dimen/_5sdp"
     android:orientation="vertical"
     android:layout_margin="@dimen/_10sdp"
-    android:background="@drawable/less_border_blue"
+    android:background="@drawable/less_border_white"
     android:layout_height="wrap_content">
     <TextView
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/name"
-        android:textSize="@dimen/_20ssp"
+        android:textSize="@dimen/_14ssp"
         android:textAlignment="viewStart"
-        android:theme="@style/font_semi_bold"
-        style="@style/font_semi_bold"
+        style="@style/font_medium"
         android:textColor="@color/black"
         android:id="@+id/topper_tips_name"
         android:padding="@dimen/_5sdp"
@@ -25,9 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/passing_year"
-        android:theme="@style/font_regular"
         style="@style/font_regular"
-        android:textSize="@dimen/_14ssp"
+        android:textSize="@dimen/_10ssp"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
         android:id="@+id/topper_tips_passing_year"
@@ -39,9 +37,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/college_name"
-        android:textSize="@dimen/_14ssp"
+        android:textSize="@dimen/_10ssp"
         android:textAlignment="viewStart"
-        android:theme="@style/font_regular"
         style="@style/font_regular"
         android:textColor="@color/black"
         android:id="@+id/topper_tips_college"
@@ -52,9 +49,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/message"
-        android:theme="@style/font_regular"
         style="@style/font_regular"
-        android:textSize="@dimen/_18ssp"
+        android:textSize="@dimen/_12ssp"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
         android:id="@+id/topper_tips_message"
