--- a/app/src/main/res/layout/activity_btech_agriculture_bsc_horticulture_ogpa_calculator.xml
+++ b/app/src/main/res/layout/activity_btech_agriculture_bsc_horticulture_ogpa_calculator.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="@drawable/gradient_blue_to_white"
     tools:context=".Btech_Agriculture_Bsc_Horticulture_OGPA_Calculator">
     <ScrollView
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
 
                 android:theme="@style/font_bold"
                 style="@style/font_bold"
-                android:background="@color/white"
+                android:background="@color/transparent"
                 app:titleTextColor="@color/black"
                 app:subtitleTextColor="@color/black"
                 android:layout_width="match_parent"
@@ -36,7 +36,7 @@
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_20ssp"
                 android:layout_marginBottom="@dimen/_10sdp"
-                android:background="@drawable/less_border_blue"
+                android:background="@drawable/less_border_white"
                 android:layout_height="wrap_content"
                 tools:ignore="UselessParent">
                 <TextView
@@ -101,7 +101,7 @@
                 android:orientation="vertical"
                 android:id="@+id/linear2"
                 android:layout_margin="@dimen/_10sdp"
-                android:background="@drawable/less_border_blue"
+                android:background="@drawable/less_border_white"
                 android:layout_height="wrap_content"
                 tools:ignore="UselessParent">
                 <TextView
@@ -166,7 +166,7 @@
                 android:orientation="vertical"
                 android:id="@+id/linear3"
                 android:layout_margin="@dimen/_10sdp"
-                android:background="@drawable/less_border_blue"
+                android:background="@drawable/less_border_white"
                 android:layout_height="wrap_content"
                 tools:ignore="UselessParent">
                 <TextView
@@ -231,7 +231,7 @@
                 android:orientation="vertical"
                 android:id="@+id/linear4"
                 android:layout_margin="@dimen/_10sdp"
-                android:background="@drawable/less_border_blue"
+                android:background="@drawable/less_border_white"
                 android:layout_height="wrap_content"
                 tools:ignore="UselessParent">
                 <TextView
@@ -296,7 +296,7 @@
                 android:orientation="vertical"
                 android:id="@+id/linear5"
                 android:layout_margin="@dimen/_10sdp"
-                android:background="@drawable/less_border_blue"
+                android:background="@drawable/less_border_white"
                 android:layout_height="wrap_content"
                 tools:ignore="UselessParent">
                 <TextView
@@ -361,7 +361,7 @@
                 android:orientation="vertical"
                 android:id="@+id/linear6"
                 android:layout_margin="@dimen/_10sdp"
-                android:background="@drawable/less_border_blue"
+                android:background="@drawable/less_border_white"
                 android:layout_height="wrap_content"
                 tools:ignore="UselessParent">
                 <TextView
@@ -426,7 +426,7 @@
                 android:orientation="vertical"
                 android:id="@+id/linear7"
                 android:layout_margin="@dimen/_10sdp"
-                android:background="@drawable/less_border_blue"
+                android:background="@drawable/less_border_white"
                 android:layout_height="wrap_content"
                 tools:ignore="UselessParent">
                 <TextView
@@ -491,7 +491,7 @@
                 android:orientation="vertical"
                 android:id="@+id/linear8"
                 android:layout_margin="@dimen/_10sdp"
-                android:background="@drawable/less_border_blue"
+                android:background="@drawable/less_border_white"
                 android:layout_height="wrap_content"
                 tools:ignore="UselessParent">
                 <TextView
@@ -556,7 +556,7 @@
                 android:orientation="vertical"
                 android:id="@+id/linear9"
                 android:layout_margin="@dimen/_10sdp"
-                android:background="@drawable/less_border_blue"
+                android:background="@drawable/less_border_white"
                 android:layout_height="wrap_content"
                 tools:ignore="UselessParent">
                 <TextView
@@ -621,7 +621,7 @@
                 android:orientation="vertical"
                 android:id="@+id/linear10"
                 android:layout_margin="@dimen/_10sdp"
-                android:background="@drawable/less_border_blue"
+                android:background="@drawable/less_border_white"
                 android:layout_height="wrap_content"
                 tools:ignore="UselessParent">
                 <TextView
@@ -686,7 +686,7 @@
                 android:orientation="vertical"
                 android:id="@+id/linear11"
                 android:layout_margin="@dimen/_10sdp"
-                android:background="@drawable/less_border_blue"
+                android:background="@drawable/less_border_white"
                 android:layout_height="wrap_content"
                 tools:ignore="UselessParent">
                 <TextView
@@ -754,7 +754,7 @@
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_20ssp"
-                android:background="@drawable/less_border_blue"
+                android:background="@drawable/less_border_white"
                 android:layout_height="wrap_content"
                 tools:ignore="UselessParent">
                 <TextView
