--- a/app/src/main/res/layout/activity_email_verification_page.xml
+++ b/app/src/main/res/layout/activity_email_verification_page.xml
@@ -38,6 +38,7 @@ tools:context=".newUiActivity.EmailVerificationPage">
                         android:textSize="@dimen/_16ssp"
                         android:textColor="@color/black"/>
                     <LinearLayout
+                        android:layout_gravity="center"
                         android:orientation="horizontal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
@@ -60,7 +61,16 @@ tools:context=".newUiActivity.EmailVerificationPage">
                             android:textSize="@dimen/_20ssp"
                             android:textColor="@color/black"/>
                     </LinearLayout>
-
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/keep_trying_to_get_verification_email_untill_you_recive_a_email"
+                        android:textAlignment="center"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="@dimen/_10sdp"
+                        android:layout_marginEnd="@dimen/_10sdp"
+                        android:textSize="@dimen/_12ssp"
+                        android:textColor="@color/black"/>
                 </LinearLayout>
             </RelativeLayout>
     </androidx.core.widget.NestedScrollView>
