--- a/app/src/main/res/layout/activity_main_home_screen.xml
+++ b/app/src/main/res/layout/activity_main_home_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -8,7 +8,11 @@
     tools:openDrawer="start"
     android:layout_height="match_parent"
     tools:context=".newUiActivity.MainHomeScreen">
+
+
+
     <RelativeLayout
+        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -39,11 +43,33 @@
                     app:menu="@menu/main_home_side_nav_menu"/>
 
                 <androidx.fragment.app.FragmentContainerView
+
                     android:layout_alignParentTop="true"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/fragment_container_main_home"
                     android:layout_above="@id/bottom_navigation_main_home"
                     />
-            </RelativeLayout>
-</RelativeLayout>
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/baseline_settings_24"
+                    android:background="@color/transparent"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_margin="@dimen/_28sdp"
+                    android:id="@+id/settings_button_main_home"
+                    />
+    </RelativeLayout>
+    <com.google.android.material.navigation.NavigationView
+        app:headerLayout="@layout/header_layout_side_nav_main_home_new_ui"
+        android:background="@color/white"
+        app:itemTextColor="@color/black"
+        app:itemIconTint="@color/black"
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/main_home_side_nav_menu" />
+</androidx.drawerlayout.widget.DrawerLayout>
