--- a/app/src/main/res/menu/main_home_side_nav_menu.xml
+++ b/app/src/main/res/menu/main_home_side_nav_menu.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:iconTint="@color/black" app:showAsAction="withText" android:title="@string/home" android:id="@+id/menu_home" android:icon="@drawable/home"/>
-    <item app:showAsAction="withText" android:title="App Update" android:id="@+id/menu_app_update" android:icon="@drawable/update"/>
-    <item app:showAsAction="withText" android:title="Bug" android:id="@+id/menu_bug" android:icon="@drawable/bug"/>
-    <item app:showAsAction="withText" android:title="Change Email" android:id="@+id/menu_change_email" android:icon="@drawable/change"/>
-    <item app:showAsAction="withText" android:title="Change Password" android:id="@+id/menu_change_password" android:icon="@drawable/password"/>
+<!--    <item android:iconTint="@color/black" app:showAsAction="withText" android:title="@string/home" android:id="@+id/menu_home" android:icon="@drawable/home"/>-->
+    <item app:showAsAction="withText" android:title="@string/bug" android:id="@+id/menu_bug" android:icon="@drawable/bug"/>
+    <item app:showAsAction="withText" android:title="@string/change_email" android:id="@+id/menu_change_email" android:icon="@drawable/change"/>
+    <item app:showAsAction="withText" android:title="@string/change_password" android:id="@+id/menu_change_password" android:icon="@drawable/password"/>
     <item app:showAsAction="withText" android:title="@string/change_language" android:id="@+id/menu_change_language" android:icon="@drawable/hindi"/>
-    <item app:showAsAction="withText" android:title="Feedback" android:id="@+id/menu_feedback" android:icon="@drawable/feedback"/>
+    <item app:showAsAction="withText" android:title="@string/contact_owner" android:id="@+id/menu_contact_owner" android:icon="@drawable/connection"/>
+    <item app:showAsAction="withText" android:title="@string/feedback" android:id="@+id/menu_feedback" android:icon="@drawable/feedback"/>
+    <item app:showAsAction="withText" android:title="@string/logout" android:id="@+id/menu_logout" android:icon="@drawable/logout"/>
 </menu>
