Added old new schemas which is now getting fetched from firebase

--- a/app/src/main/res/layout/fragment_home_new_ui.xml
+++ b/app/src/main/res/layout/fragment_home_new_ui.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:theme="@style/ThemeOverlay.GradeACE.FullscreenContainer"
     android:background="@color/transparent"
     android:layout_width="match_parent"
@@ -42,8 +43,8 @@
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_25sdp"
+                android:layout_marginBottom="@dimen/_25sdp"
                 android:text="@string/Calculate_your_Overall_Credit_Point_Average"
                 android:textSize="@dimen/_16ssp"
                 android:textColor="@color/black"/>
@@ -112,6 +113,156 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 />
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/bsc_agriculture_frag_home_new_ui_new"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:orientation="vertical"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginEnd="@dimen/_15sdp"
+                android:layout_width="match_parent"
+                android:background="@drawable/less_border_white"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_height="match_parent">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                        <TextView
+                            android:theme="@style/font_regular"
+                            android:paddingStart="@dimen/_20sdp"
+                            android:textSize="@dimen/_18ssp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/bsc_agriculture"
+                            android:textAlignment="center"
+                            android:padding="@dimen/_5sdp"
+                            android:id="@+id/bsc_agriculture_frag_home_new_ui_new_name"
+                            android:textColor="@color/black"/>
+                        <TextView
+                            android:layout_below="@+id/bsc_agriculture_frag_home_new_ui_new_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="NewMessage"
+                            android:id="@+id/bsc_agriculture_frag_home_new_ui_new_message"
+                            android:textSize="@dimen/_12sdp"
+                            android:layout_marginBottom="@dimen/_4sdp"
+                            android:textAlignment="center"/>
+                    <ImageView
+                        android:layout_marginStart="@dimen/_20sdp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:background="@color/white"
+                        android:src="@drawable/baseline_agriculture_24" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/bsc_horticulture_frag_home_new_ui_new"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:orientation="vertical"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginEnd="@dimen/_15sdp"
+                android:layout_width="match_parent"
+                android:background="@drawable/less_border_white"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_height="match_parent">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:theme="@style/font_regular"
+                        android:paddingStart="@dimen/_20sdp"
+                        android:textSize="@dimen/_18ssp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/bsc_horticulture"
+                        android:textAlignment="center"
+                        android:padding="@dimen/_5sdp"
+                        android:id="@+id/bsc_horticulture_frag_home_new_ui_new_name"
+                        android:textColor="@color/black"/>
+                    <TextView
+                        android:layout_below="@+id/bsc_horticulture_frag_home_new_ui_new_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="NewMessage"
+                        android:id="@+id/bsc_horticulture_frag_home_new_ui_new_message"
+                        android:textSize="@dimen/_12sdp"
+                        android:layout_marginBottom="@dimen/_4sdp"
+                        android:textAlignment="center"/>
+                    <ImageView
+                        android:layout_marginStart="@dimen/_20sdp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:background="@color/white"
+                        android:src="@drawable/baseline_local_florist_24" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/btech_agriculture_frag_home_new_ui_new"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:orientation="vertical"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginEnd="@dimen/_15sdp"
+                android:layout_width="match_parent"
+                android:background="@drawable/less_border_white"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_height="match_parent">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:theme="@style/font_regular"
+                        android:paddingStart="@dimen/_20sdp"
+                        android:textSize="@dimen/_18ssp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/btech_agriculture_1"
+                        android:textAlignment="center"
+                        android:paddingTop="@dimen/_5sdp"
+                        android:id="@+id/btech_agriculture_frag_home_new_ui_new_name_1"
+                        android:textColor="@color/black"/>
+                    <TextView
+                        android:theme="@style/font_regular"
+                        android:paddingStart="@dimen/_20sdp"
+                        android:textSize="@dimen/_18ssp"
+                        android:layout_width="match_parent"
+                        android:paddingBottom="@dimen/_5sdp"
+                        android:layout_below="@+id/btech_agriculture_frag_home_new_ui_new_name_1"
+                        android:layout_height="wrap_content"
+                        android:text="@string/btech_agriculture_2"
+                        android:textAlignment="center"
+                        android:id="@+id/btech_agriculture_frag_home_new_ui_new_name_2"
+                        android:textColor="@color/black"/>
+                    <TextView
+                        android:layout_below="@+id/btech_agriculture_frag_home_new_ui_new_name_2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="NewMessage"
+                        android:id="@+id/btech_agriculture_frag_home_new_ui_new_message"
+                        android:textSize="@dimen/_12sdp"
+                        android:layout_marginBottom="@dimen/_4sdp"
+                        android:textAlignment="center"/>
+                    <ImageView
+                        android:layout_marginStart="@dimen/_20sdp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:background="@color/white"
+                        android:src="@drawable/baseline_engineering_24" />
+                </RelativeLayout>
+            </LinearLayout>
+
             <androidx.appcompat.widget.AppCompatButton
                 android:theme="@style/font_regular"
                 android:paddingStart="@dimen/_20sdp"
